small refactoring ha-ha, no